@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.880 2008-01-03 02:52:40 castaglia Exp $
+$Id: NEWS,v 1.881 2008-01-03 03:49:53 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -86,6 +86,9 @@ CVS
   scheduling priority of the session process during file transfers.
 - Bug 3020 - Server replies to NLST with 450 at the wrong time.
 - Bug 1771 - mod_ratio compile warnings.
+- Bug 1973 - mod_ratio uses the too-small int datatype for tracking bytes.
+  The mod_ratio module has been updated to use off_t, instead of int, for
+  tracking bytes.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
